--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- INTERNAL & EXTERNAL CSS/FONTS -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+    <!-- INTERNAL & EXTERNAL CSS/FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
-  <title>Natorus</title>
-</head>
-<body>
-  
-</body>
+    <title>Natorus</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo__box">
+        <img src="img/logo.png" alt="logo" class="logo">
+      </div>
+      <div class="heading__primary--container">
+        <h1 class="heading__primary">
+          <span class="heading__primary--main">Outdoors</span>
+          <span class="heading__primary--sub">is where life happens</span>
+        </h1>
+      </div>
+    </header>
+  </body>
 </html>
